[package]
name = "phone-game-rust"
version = "0.1.0"
authors = ["Krisztian Pinter <kpinter3.14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
emscripten_main_loop = "0.1.1"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["unsafe_textures"]

[dependencies.cgmath]
version = "0.18.0"
default-features = false
features = ["swizzle"]
