[package]
name = "cherry-ball"
version = "0.1.0"
authors = ["Krisztian Pinter <kpinter3.14@gmail.com>"]
edition = "2018"

[dependencies]
game-lib = { path = "../game-lib" }
rand = "0.8.2"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["unsafe_textures"]

[dependencies.cgmath]
version = "0.18.0"
default-features = false
features = ["swizzle"]
